<?xml version="1.0"?>


<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gxf_isaac_ess</name>
  <version>3.2.5</version>
  <description>Disparity GXF extension.</description>


  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>isaac_ros_common</depend>
  <depend>isaac_ros_gxf</depend>
  <depend>gxf_isaac_messages</depend>
  <depend>gxf_isaac_tensorops</depend>

  <build_depend>gxf_isaac_gems</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
