<?xml version="1.0"?>

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_ess</name>
  <version>3.2.5</version>
  <description>DNN Stereo Disparity Network for Isaac ROS</description>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_nitros_camera_info_type</depend>
  <depend>isaac_ros_nitros_disparity_image_type</depend>
  <depend>isaac_ros_nitros_image_type</depend>
  <depend>isaac_ros_image_proc</depend>
  <depend>isaac_ros_stereo_image_proc</depend>
  <depend>gxf_isaac_messages</depend>
  <depend>gxf_isaac_messages_throttler</depend>
  <depend>isaac_ros_ess_models_install</depend>

  <build_depend>isaac_ros_common</build_depend>
  <build_depend>gxf_isaac_gems</build_depend>


  <exec_depend>gxf_isaac_ess</exec_depend>
  <exec_depend>gxf_isaac_sgm</exec_depend>
  <exec_depend>gxf_isaac_tensorops</exec_depend>
  <exec_depend>gxf_isaac_video_buffer_utils</exec_depend>
  <exec_depend>isaac_ros_test</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
